--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "next": "15.4.5",
     "qs": "^6.14.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
