--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
-    "rehype-raw": "^7.0.0"
+    "rehype-raw": "^7.0.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
