--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,11 @@
     "@strapi/strapi": "5.19.0",
     "better-sqlite3": "11.3.0",
     "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "strapi-plugin-random-sort": "^0.0.3",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
