--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "strapi-plugin-random-sort": "^0.0.3",
+    "stream-buffers": "^3.0.3",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
