--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "better-sqlite3": "11.3.0",
     "nodemailer": "^7.0.5",
     "pdfkit": "^0.17.1",
+    "qrcode": "^1.5.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
