--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "next": "15.4.5",
     "qs": "^6.14.0",
     "react": "19.1.0",
