--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
-    "next": "15.4.5",
+    "ioredis": "^5.8.2",
+    "next": "^15.5.6",
     "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
