--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,12 @@
   },
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^6.0.2",
-    "@strapi/plugin-cloud": "5.19.0",
+    "@strapi/plugin-cloud": "^5.19.0",
     "@strapi/plugin-seo": "^2.0.8",
-    "@strapi/plugin-users-permissions": "5.19.0",
+    "@strapi/plugin-users-permissions": "^5.19.0",
     "@strapi/provider-email-nodemailer": "^5.20.0",
-    "@strapi/strapi": "5.19.0",
-    "better-sqlite3": "11.3.0",
+    "@strapi/strapi": "^5.19.0",
+    "better-sqlite3": "^11.3.0",
     "nodemailer": "^7.0.5",
     "pdfkit": "^0.17.1",
     "qrcode": "^1.5.4",
