--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,57 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "ioredis": "^5.8.2",
-    "next": "^15.5.6",
+    "next": "^16.1.1",
     "qs": "^6.14.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
     "rehype-raw": "^7.0.0",
     "swr": "^2.3.6"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.0",
     "@eslint/eslintrc": "^3",
-    "@storybook/addon-a11y": "^9.1.0",
-    "@storybook/addon-docs": "^9.1.0",
-    "@storybook/addon-onboarding": "^9.1.0",
-    "@storybook/addon-vitest": "^9.1.0",
-    "@storybook/nextjs-vite": "^9.1.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.32.0",
-    "eslint-config-next": "15.4.5",
+    "eslint-config-next": "^16.1.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-storybook": "^9.1.0",
     "jsdom": "^26.1.0",
     "playwright": "^1.54.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "storybook": "^9.1.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vite-tsconfig-paths": "^6.0.3"
   }
 }
