--- a/frontend/.browserslistrc
+++ b/frontend/.browserslistrc
@@ -1,4 +1,5 @@
-last 2 Chrome versions
-last 2 Edge versions
-last 2 Firefox versions
-last 2 Safari versions
+[production]
+>0.5%
+not dead
+not ie <= 11
+not op_mini all
