--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
-    "ioredis": "^5.8.2",
     "next": "^16.1.1",
     "qs": "^6.14.0",
     "react": "^19.2.3",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@opennextjs/cloudflare": "^1.16.5",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -44,7 +48,8 @@
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
     "typescript": "^5",
+    "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^3.2.4",
-    "vite-tsconfig-paths": "^6.0.3"
+    "wrangler": "^4.65.0"
   }
 }
