--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@opennextjs/cloudflare": "^1.16.5",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -49,7 +48,6 @@
     "tailwindcss": "^4.1.11",
     "typescript": "^5",
     "vite-tsconfig-paths": "^6.0.3",
-    "vitest": "^3.2.4",
-    "wrangler": "^4.65.0"
+    "vitest": "^3.2.4"
   }
 }
