--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,12 +39,13 @@
     "eslint": "^9.32.0",
     "eslint-config-next": "^16.1.1",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "^26.1.0",
     "playwright": "^1.54.2",
     "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
+    "prettier": "3.8.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5",
     "vite-tsconfig-paths": "^6.0.3",
